# Fast_A2A_app

./: .gitignore  CHANGELOG.md  README.md  SKILL.md  pyproject.toml
docs/: api.md  architecture.md  design.md  how-to.md
examples/: .env.example
examples/echo-agent/: README.md  agent.py  main.py  requirements.txt
examples/echo-multipart/: README.md  agent.py  main.py
examples/holiday-planner/: README.md  agent.py  config.py  main.py  requirements.txt
examples/image-creator/: README.md  agent.py  config.py  image_store.py  main.py  requirements.txt
examples/joke-agent/: README.md  agent.py  main.py  requirements.txt
src/fast_a2a_app/: __init__.py  _sdk_compat.py  _version.py
src/fast_a2a_app/server/: __init__.py  route.py  utils.py
src/fast_a2a_app/server/artifacts/: DOCUMENT.py  DOCUMENTS.py  MAP.py  PROMPT_SUGGESTIONS.py  TABLE.py  __init__.py  _core.py
src/fast_a2a_app/server/commons/: __init__.py  config.py  uploads.py
src/fast_a2a_app/server/task_stores/: __init__.py  _types.py  memory.py  mongo.py  postgres.py  redis.py
src/fast_a2a_app/ui/: __init__.py  app.js  index.html  route.py  styles.css
src/fast_a2a_app/ui/renderers/: DOCUMENT.js  DOCUMENTS.js  MAP.js  PROMPT_SUGGESTIONS.js  TABLE.js
