[project]
name = "fast_a2a_app"
version = "0.6.8"
description = "fast_a2a_app — Drop-in A2A server and chat UI for any AI agent"
authors = [
    {name = "Georg Boegerl", email = "georg.boegerl@web.de"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12,<4.0"
keywords = ["a2a", "agent", "ai", "fastapi", "chat", "server", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]
dependencies = [
    "a2a-sdk>=1.0.0",
    "redis>=7.4.0",
    "motor>=3.5.0",
    "asyncpg>=0.30.0",
    "starlette>=0.41.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.1.3",
    "pyyaml (>=6.0.3,<7.0.0)",
    "azure-identity (>=1.25.3,<2.0.0)",
    "openai (>=2.36.0,<3.0.0)",
    "anthropic (>=0.40.0,<1.0.0)",
    "pydantic-ai (>=1.93.0,<2.0.0)",
    "greenlet (>=3.5.0,<4.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "hatch (>=1.16.5,<2.0.0)",
]

[project.urls]
Homepage = "https://github.com/rembli/fast_a2a_app"
Repository = "https://github.com/rembli/fast_a2a_app"
Issues = "https://github.com/rembli/fast_a2a_app/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fast_a2a_app"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "examples/",
    "README.md",
    "CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
